# loco-oauth2

./: .gitignore  Cargo.toml  README.md  SECURITY-ADVISORY.md
.cargo/: config.toml
.github/workflows/: ci-demo.yml
examples/demo/: .gitignore  Cargo.toml
examples/demo/config/: development.yaml  test.yaml
examples/demo/examples/: playground.rs
examples/demo/migration/: Cargo.toml
examples/demo/migration/src/: lib.rs
examples/demo/src/: app.rs
examples/demo/src/controllers/: mod.rs  oauth2.rs
examples/demo/src/controllers/middleware/: auth.rs
examples/demo/src/initializers/: mod.rs  oauth2.rs
examples/demo/src/models/: mod.rs  o_auth2_sessions.rs  users.rs
examples/demo/src/models/_entities/: mod.rs  o_auth2_sessions.rs  prelude.rs  users.rs
examples/demo/tests/models/: users.rs
examples/demo/tests/requests/: auth.rs  mod.rs  notes.rs  oauth2.rs  prepare_data.rs  user.rs
examples/demo/tests/tasks/: seed.rs
examples/demo_0_14/: Cargo.toml
examples/demo_0_14/config/: development.yaml  test.yaml
examples/demo_0_14/examples/: playground.rs
examples/demo_0_14/migration/src/: lib.rs
examples/demo_0_14/src/: app.rs
examples/demo_0_14/src/controllers/: auth.rs  mod.rs  user.rs
examples/demo_0_14/src/initializers/: mod.rs  oauth2.rs
examples/demo_0_14/src/models/: mod.rs  o_auth2_sessions.rs  users.rs
examples/demo_0_14/src/models/_entities/: o_auth2_sessions.rs  users.rs
examples/demo_0_14/tests/models/: users.rs
examples/demo_0_14/tests/requests/: auth.rs  oauth2.rs  prepare_data.rs  user.rs
examples/demo_0_15/: .gitignore  Cargo.toml
examples/demo_0_15/.cargo/: config.toml
examples/demo_0_15/config/: development.yaml  test.yaml
examples/demo_0_15/examples/: playground.rs
examples/demo_0_15/migration/: Cargo.toml
examples/demo_0_15/migration/src/: lib.rs
examples/demo_0_15/src/: app.rs  lib.rs
examples/demo_0_15/src/controllers/: auth.rs  user.rs
examples/demo_0_15/src/initializers/: mod.rs  oauth2.rs
examples/demo_0_15/src/models/: mod.rs  o_auth2_sessions.rs  users.rs
examples/demo_0_15/src/models/_entities/: mod.rs  prelude.rs
examples/demo_0_15/tests/models/: users.rs
examples/demo_0_15/tests/requests/: auth.rs  mod.rs  oauth2.rs  prepare_data.rs  user.rs
examples/demo_0_6/: .gitignore  Cargo.toml
examples/demo_0_6/.cargo/: config.toml
examples/demo_0_6/config/: development.yaml  test.yaml
examples/demo_0_6/examples/: playground.rs
examples/demo_0_6/migration/: Cargo.toml
examples/demo_0_6/migration/src/: lib.rs
examples/demo_0_6/src/controllers/: oauth2.rs
examples/demo_0_6/src/initializers/: axum_session.rs  mod.rs  oauth2.rs
examples/demo_0_6/src/models/: mod.rs  o_auth2_sessions.rs  users.rs
examples/demo_0_6/src/models/_entities/: mod.rs  o_auth2_sessions.rs  prelude.rs  users.rs
examples/demo_0_6/tests/models/: users.rs
examples/demo_0_6/tests/requests/: auth.rs  mod.rs  notes.rs  oauth2.rs  prepare_data.rs  user.rs
examples/demo_0_6/tests/tasks/: seed.rs
src/: config.rs  error.rs  lib.rs  oauth2_grant.rs
src/controllers/: mod.rs  oauth2.rs
src/controllers/middleware/: auth.rs  mod.rs  private.rs  private_cookie_jar.rs
src/controllers/models/: mod.rs  oauth2_sessions.rs  users.rs
src/grants/: authorization_code.rs
src/middleware/: mod.rs  private_cookie_jar.rs
src/migration/: m20240101_000000_oauth2_sessions.rs  mod.rs
src/models/: oauth2_sessions.rs  users.rs
src/oauth2_store/: mod.rs
