[package]
name = "loco-oauth2"
version = "0.3.0"
edition = "2021"
description = "A simple oauth2 library for loco"
license = "MIT"
readme = "README.md"
repository = "https://github.com/marcson909/loco-oauth2"
homepage = "https://loco.rs/"
keywords = ["loco", "oauth2"]
categories = ["web-programming"]

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
async-trait = "0.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
axum = "0.7.4"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
# axum session
axum_session = { version = "0.14" }
cookie = { version = "0.18", features = ["private"] }
http = "1.1"
loco-rs = { version = "0.8.1" }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["serde_json", "json"] }
sea-orm = { version = "1.0.0-rc.4", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = { version = "2.5" }
thiserror = "1"
time = "0.3"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dependencies.sea-orm-migration]
version = "1.0.0-rc.4"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
]
[dev-dependencies]
axum-test = "14.4"
serde_urlencoded = "0.7.1"
wiremock = "0.6"
